--- a/qtgui/mainwindow.ui
+++ b/qtgui/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1224</width>
-    <height>914</height>
+    <width>1147</width>
+    <height>837</height>
    </rect>
   </property>
   <property name="font">
@@ -22,7 +22,11 @@
   <widget class="QWidget" name="centralwidget">
    <layout class="QHBoxLayout" name="horizontalLayout">
     <item>
-     <widget class="QMdiArea" name="mdiArea"/>
+     <widget class="QMdiArea" name="mdiArea">
+      <property name="layoutDirection">
+       <enum>Qt::LeftToRight</enum>
+      </property>
+     </widget>
     </item>
    </layout>
   </widget>
@@ -31,36 +35,49 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1224</width>
-     <height>23</height>
+     <width>1147</width>
+     <height>21</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
     <property name="title">
      <string>File</string>
     </property>
-    <addaction name="actionNew_Project"/>
-    <addaction name="actionLoad_project"/>
+    <addaction name="action_newProject"/>
+    <addaction name="action_loadProject"/>
     <addaction name="separator"/>
-    <addaction name="actionSave_project"/>
-    <addaction name="actionSave_points_model"/>
-    <addaction name="actionSave_SAS_curve"/>
+    <addaction name="action_saveProject"/>
+    <addaction name="action_savePointsModel"/>
+    <addaction name="action_saveSasCurve"/>
     <addaction name="separator"/>
-    <addaction name="actionImport_model_s"/>
-    <addaction name="actionDelete_all_models"/>
+    <addaction name="action_importModels"/>
+    <addaction name="action_deleteAllModels"/>
    </widget>
    <widget class="QMenu" name="menuWindows">
     <property name="title">
      <string>Windows</string>
     </property>
-    <addaction name="actionCascade_2"/>
-    <addaction name="actionTile_2"/>
+    <addaction name="action_Cascade"/>
+    <addaction name="action_Tile"/>
+   </widget>
+   <widget class="QMenu" name="menuOptions">
+    <property name="title">
+     <string>Options</string>
+    </property>
+    <addaction name="action_advancedOptions"/>
    </widget>
    <addaction name="menuFile"/>
+   <addaction name="menuOptions"/>
    <addaction name="menuWindows"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
   <widget class="QDockWidget" name="dockWidget_explorer">
+   <property name="maximumSize">
+    <size>
+     <width>524287</width>
+     <height>524287</height>
+    </size>
+   </property>
    <property name="windowTitle">
     <string>Model Explorer</string>
    </property>
@@ -69,37 +86,30 @@
    </attribute>
    <widget class="QWidget" name="dockWidgetContents">
     <layout class="QGridLayout" name="gridLayout">
-     <item row="1" column="0" colspan="2">
-      <widget class="QTableView" name="tableView_stlmodels"/>
+     <item row="4" column="0" colspan="2">
+      <widget class="QTableView" name="tableView_stlModels"/>
      </item>
-     <item row="1" column="2" colspan="2">
-      <widget class="QTableView" name="tableView_mathmodels"/>
-     </item>
-     <item row="2" column="3">
-      <widget class="QPushButton" name="pushButton_showMathmodel">
-       <property name="text">
-        <string>show math model</string>
-       </property>
-      </widget>
-     </item>
-     <item row="2" column="1">
-      <widget class="QPushButton" name="pushButton_showStlmodels">
-       <property name="text">
-        <string>show stl model(s)</string>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="3">
-      <widget class="QPushButton" name="pushButton_deleteModel">
-       <property name="text">
-        <string>delete selected model</string>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="2">
+     <item row="2" column="0">
       <widget class="QPushButton" name="pushButton_importModels">
        <property name="text">
         <string>import model(s)</string>
+       </property>
+      </widget>
+     </item>
+     <item row="7" column="1">
+      <widget class="QPushButton" name="pushButton_modifyModel">
+       <property name="text">
+        <string>modify model</string>
+       </property>
+      </widget>
+     </item>
+     <item row="5" column="0" colspan="2">
+      <widget class="QTableView" name="tableView_mathModels"/>
+     </item>
+     <item row="2" column="1">
+      <widget class="QPushButton" name="pushButton_deleteModels">
+       <property name="text">
+        <string>delete selected model(s)</string>
        </property>
       </widget>
      </item>
@@ -107,6 +117,20 @@
       <widget class="QLabel" name="label_projectName">
        <property name="text">
         <string>Project: New Project</string>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="0">
+      <widget class="QPushButton" name="pushButton_showAllModels">
+       <property name="text">
+        <string>show all models</string>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="1">
+      <widget class="QPushButton" name="pushButton_showSelectedModels">
+       <property name="text">
+        <string>show selected model(s)</string>
        </property>
       </widget>
      </item>
@@ -123,19 +147,9 @@
    <widget class="QWidget" name="dockWidgetContents_2">
     <layout class="QVBoxLayout" name="verticalLayout">
      <item>
-      <widget class="QTextEdit" name="textEdit">
+      <widget class="QTextEdit" name="textEdit_console">
        <property name="readOnly">
         <bool>true</bool>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QProgressBar" name="progressBar">
-       <property name="maximum">
-        <number>100</number>
-       </property>
-       <property name="value">
-        <number>-1</number>
        </property>
       </widget>
      </item>
@@ -143,6 +157,18 @@
    </widget>
   </widget>
   <widget class="QDockWidget" name="dockWidget_controlPanel">
+   <property name="minimumSize">
+    <size>
+     <width>264</width>
+     <height>200</height>
+    </size>
+   </property>
+   <property name="maximumSize">
+    <size>
+     <width>300</width>
+     <height>400</height>
+    </size>
+   </property>
    <property name="windowTitle">
     <string>Control Panel</string>
    </property>
@@ -155,16 +181,18 @@
       <widget class="QGroupBox" name="groupBox_genPoints">
        <property name="font">
         <font>
+         <family>Arial</family>
+         <pointsize>10</pointsize>
          <weight>50</weight>
          <bold>false</bold>
         </font>
        </property>
        <property name="title">
-        <string>Generate points model</string>
+        <string>Generate lattice model</string>
        </property>
        <layout class="QGridLayout" name="gridLayout_2">
         <item row="2" column="2">
-         <widget class="QPushButton" name="pushButton_genPoints">
+         <widget class="QPushButton" name="pushButton_genLatticeModel">
           <property name="text">
            <string>generate</string>
           </property>
@@ -201,6 +229,8 @@
       <widget class="QGroupBox" name="groupBox_calcSas">
        <property name="font">
         <font>
+         <family>Arial</family>
+         <pointsize>10</pointsize>
          <weight>50</weight>
          <bold>false</bold>
         </font>
@@ -209,31 +239,10 @@
         <string>Calculate SAS data</string>
        </property>
        <layout class="QGridLayout" name="gridLayout_3">
-        <item row="2" column="1" colspan="2">
-         <widget class="QLineEdit" name="lineEdit_lmax">
-          <property name="text">
-           <string>50</string>
-          </property>
-         </widget>
-        </item>
-        <item row="1" column="1" colspan="2">
-         <widget class="QLineEdit" name="lineEdit_qnum">
-          <property name="text">
-           <string>200</string>
-          </property>
-         </widget>
-        </item>
         <item row="1" column="0">
          <widget class="QLabel" name="label_4">
           <property name="text">
            <string>q number</string>
-          </property>
-         </widget>
-        </item>
-        <item row="0" column="1">
-         <widget class="QLineEdit" name="lineEdit_qmin">
-          <property name="text">
-           <string>0.001</string>
           </property>
          </widget>
         </item>
@@ -244,6 +253,41 @@
           </property>
          </widget>
         </item>
+        <item row="0" column="2">
+         <widget class="QLineEdit" name="lineEdit_qmin">
+          <property name="text">
+           <string>0.001</string>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="2" colspan="2">
+         <widget class="QLineEdit" name="lineEdit_lmax">
+          <property name="text">
+           <string>50</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="3">
+         <widget class="QLineEdit" name="lineEdit_qmax">
+          <property name="text">
+           <string>1</string>
+          </property>
+         </widget>
+        </item>
+        <item row="8" column="3">
+         <widget class="QPushButton" name="pushButton_calcSas">
+          <property name="text">
+           <string>calculate</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="2" colspan="2">
+         <widget class="QLineEdit" name="lineEdit_qnum">
+          <property name="text">
+           <string>200</string>
+          </property>
+         </widget>
+        </item>
         <item row="2" column="0">
          <widget class="QLabel" name="label_5">
           <property name="text">
@@ -251,75 +295,17 @@
           </property>
          </widget>
         </item>
-        <item row="0" column="2">
-         <widget class="QLineEdit" name="lineEdit_qmax">
-          <property name="text">
-           <string>1</string>
-          </property>
-         </widget>
-        </item>
-        <item row="4" column="0">
-         <widget class="QCheckBox" name="checkBox_parallel">
-          <property name="enabled">
-           <bool>true</bool>
-          </property>
-          <property name="text">
-           <string>parallel</string>
-          </property>
-          <property name="checked">
-           <bool>false</bool>
-          </property>
-         </widget>
-        </item>
-        <item row="4" column="1" colspan="2">
-         <widget class="QPushButton" name="pushButton_calcSas">
-          <property name="text">
-           <string>calculate</string>
-          </property>
-         </widget>
-        </item>
-        <item row="5" column="0">
-         <widget class="QLabel" name="label_8">
-          <property name="font">
-           <font>
-            <weight>75</weight>
-            <bold>true</bold>
-           </font>
-          </property>
-          <property name="text">
-           <string>Parallel Control</string>
-          </property>
-         </widget>
-        </item>
-        <item row="6" column="2">
-         <widget class="QLineEdit" name="lineEdit_coreNum">
-          <property name="text">
-           <string>2</string>
-          </property>
-         </widget>
-        </item>
-        <item row="6" column="0" colspan="2">
-         <widget class="QLabel" name="label_6">
-          <property name="text">
-           <string>CPU core number for calculation</string>
-          </property>
-         </widget>
-        </item>
-        <item row="7" column="2">
-         <widget class="QLineEdit" name="lineEdit_processNum">
-          <property name="text">
-           <string>4</string>
-          </property>
-         </widget>
-        </item>
-        <item row="7" column="0" colspan="2">
-         <widget class="QLabel" name="label_7">
-          <property name="text">
-           <string>Total process number</string>
-          </property>
-         </widget>
-        </item>
        </layout>
+      </widget>
+     </item>
+     <item>
+      <widget class="QProgressBar" name="progressBar">
+       <property name="maximum">
+        <number>100</number>
+       </property>
+       <property name="value">
+        <number>-1</number>
+       </property>
       </widget>
      </item>
     </layout>
@@ -330,12 +316,12 @@
     <string>Load Project</string>
    </property>
   </action>
-  <action name="actionSave_project">
+  <action name="action_saveProject">
    <property name="text">
     <string>Save project</string>
    </property>
   </action>
-  <action name="actionImport_model_s">
+  <action name="action_importModels">
    <property name="text">
     <string>Import model(s)</string>
    </property>
@@ -350,12 +336,12 @@
     <string>Tile</string>
    </property>
   </action>
-  <action name="actionCascade_2">
+  <action name="action_Cascade">
    <property name="text">
     <string>Cascade</string>
    </property>
   </action>
-  <action name="actionTile_2">
+  <action name="action_Tile">
    <property name="text">
     <string>Tile</string>
    </property>
@@ -365,29 +351,34 @@
     <string>Contol Panel</string>
    </property>
   </action>
-  <action name="actionNew_Project">
+  <action name="action_newProject">
    <property name="text">
     <string>New project</string>
    </property>
   </action>
-  <action name="actionDelete_all_models">
+  <action name="action_deleteAllModels">
    <property name="text">
     <string>Delete all models</string>
    </property>
   </action>
-  <action name="actionSave_points_model">
+  <action name="action_savePointsModel">
    <property name="text">
     <string>Save points model</string>
    </property>
   </action>
-  <action name="actionSave_SAS_curve">
+  <action name="action_saveSasCurve">
    <property name="text">
     <string>Save SAS curve</string>
    </property>
   </action>
-  <action name="actionLoad_project">
+  <action name="action_loadProject">
    <property name="text">
     <string>Load project</string>
+   </property>
+  </action>
+  <action name="action_advancedOptions">
+   <property name="text">
+    <string>Advanced options</string>
    </property>
   </action>
   <zorder>dockWidget_controlPanel</zorder>
